s3: smbd: Incorrect file size returned in the response of "FILE_SUPERSEDE Create"

https://bugzilla.samba.org/show_bug.cgi?id=11240

Signed-off-by: Kenny Dinh <kdinh@peaxy.net>
Reviewed-by: Jeremy Allison <jra@samba.org>
Reviewed-by: Ralph Böhme <rb@sernet.de>
(cherry picked from commit d68383e9638254d1b6805b3d3ea3e5e897908374)